<resources>
    <string name="app_name">AlloFit</string>
    <string name="title_activity_main_page">Allofit Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AlloFit</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>

    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <!-- Diet Plan -->
    <string name="exercise_prompt">Choose your type of Work</string>
    <string-array name="exercise">
        <item>1. Sedentary - No Exercise</item>
        <item>2. Lightly Active - Little Bit Exercise</item>
        <item>3. Moderately Active - Exercise/Sports</item>
        <item>4. Very Active - Hard Exercise/Daily Sports</item>
        <item>5. Extremely Active - Very hard Exercise/ Physical Job</item>
    </string-array>
    <string name="title_activity_maps">Nearby Hospitals</string>

    <!-- Settings Activity -->

    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="Key_Goal">key_goal</string>
    <string name="key_send_feedback">key_send_feedback</string>

    <!-- Strings related to Settings -->


    <string name="Steps_goal">Step Goal</string>
    <string name="summary_goal">Set the Step goal you want to achieve</string>
    <string name="title_goal">Select Number of Steps</string>
    <string-array name="pref_goal_titles">
        <item>50 Steps</item>
        <item>100 Steps</item>
        <item>1000 Steps</item>
        <item>10000 Steps</item>
        <item>20000 Steps</item>
        <item>Not set</item>
    </string-array>
    <string-array name="pref_goal_values">
        <item>50</item>
        <item>100</item>
        <item>1000</item>
        <item>10000</item>
        <item>20000</item>
        <item>0</item>
    </string-array>

</resources>
